# spawn-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/core/: Cargo.toml
crates/core/proto/: actor.proto  protocol.proto
crates/core/src/: lib.rs
crates/core/src/eigr/spawn/: eigr.spawn.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs  parse.rs
crates/derive/src/derives/: actor.rs  mod.rs
spawn-examples/: Cargo.toml  build.rs
spawn-examples/src/: joe.rs  lib.rs  main.rs
spawn-examples/src/actors/: joe.rs  mod.rs
spawn-examples/src/domain/: domain.rs
spawn-rs/: Cargo.toml  build.rs
spawn-rs/examples/: joe.rs
spawn-rs/proto/: actor.proto  protocol.proto
spawn-rs/src/: action.rs  actor.rs  context.rs  lib.rs  serializer.rs  spawn.rs  value.rs
spawn-rs/src/eigr/: eigr.spawn.rs  spawn.rs
spawn-rs/src/eigr/spawn/: eigr.functions.protocol.actors.rs  eigr.functions.protocol.rs
spawn-rs/src/handler/: actor_router.rs  callback.rs  mod.rs
