[package]
authors = ["Adriano Santos <solid.sistemas@gmail.com>", "Weslei Pereira"]
description = "Spawn Rust SDK"
documentation = "https://github.com/eigr-labs/spawn-rust-sdk"
edition = "2021"
homepage = "https://eigr.io/"
keywords = [
  "actors",
  "actor service mesh",
  "serverless",
]
license = "Apache-2.0"
name = "spawn-rs"
version = "0.1.0"

[dependencies]
actix-protobuf = "0.9.0"
actix-server = "2.2.0"
actix-web = "4"
env_logger = "0.10.0"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
tonic-build = "0.8"
