[package]
authors = ["Adriano Santos <solid.sistemas@gmail.com>", "Weslei Pereira"]
description = "Spawn Rust SDK"
documentation = "https://github.com/eigr-labs/spawn-rust-sdk"
edition = "2021"
homepage = "https://eigr.io/"
keywords = [
  "actors",
  "actor service mesh",
  "serverless",
]
license = "Apache-2.0"
name = "spawn-rs"
version = "0.1.0"

[dependencies]
env_logger = "0.10.0"
log = {version = "0.4.8", features = ["std"]}
prost = "0.12.1"
prost-types = "0.12.1"
reqwest = "0.11.20"
rocket = "=0.5.0-rc.3"

[build-dependencies]
tonic-build = "0.8"
