[package]
name = "spawn_sdk"
version = "0.1.0"
description = "Spawn Rust SDK"
keywords = [
    "actors",
    "actor service mesh",
    "serverless"
  ]
homepage = "https://eigr.io/"
documentation = "https://github.com/eigr-labs/spawn-rust-sdk"
authors = ["Adriano Santos <solid.sistemas@gmail.com>", "Weslei Pereira"]
license = "Apache-2.0"

[dependencies]
actix-web = "4"
prost = "0.10"
prost-types = "0.10"

[build-dependencies]
tonic-build = "0.8"